<resources>
    <string name="app_name">Outlook</string>
    <string name="box">Caixa de Entrada</string>
    <string name="others">Outros</string>
    <string name="filter">Filtrar</string>
    <string name="highlights">Destaques</string>
    <string name="last_week">Semana passada</string>
    <string name="search">Search Icon</string>
    <string name="email">Email</string>
    <string name="edititem">editItem</string>
    <string name="search_bottom">Buscar</string>
    <string name="calendar">Calendar</string>
    <string name="title">Lucas da Tribe</string>
    <string name="subject">[Processo Seletivo] Últimas vagas</string>
    <string name="content">Inscreva-se no processo seletivo da turma XP</string>
    <string name="time">10:20</string>
    <string name="txt_person1">EuSouDallai</string>
    <string name="subject_person1">[Processo seletivo] VDT</string>
    <string name="time_person1">10:20</string>
</resources>