<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_person"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_entry_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/box"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_person"
            app:layout_constraintStart_toEndOf="@+id/image_person"
            app:layout_constraintTop_toTopOf="@+id/image_person" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/image_person"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/search"
            app:layout_constraintTop_toTopOf="@+id/image_person" />

        <TextView
            android:id="@+id/btn_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/radious_gray_light"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:text="@string/others"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_filters"
            app:layout_constraintStart_toEndOf="@+id/btn_highlights"
            app:layout_constraintTop_toTopOf="@+id/btn_filters"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/btn_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radious_gray_light"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_search"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/btn_highlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/radious_gray"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:text="@string/highlights"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_filters" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <View
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar_bottom"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_search_bottom"
            android:contentDescription="@string/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/img_search_bottom"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_baseline_search_24_grey"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@id/img_calendar_btn"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_bottom"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/img_search_bottom"
            app:layout_constraintStart_toStartOf="@+id/img_search_bottom"
            app:layout_constraintTop_toBottomOf="@+id/img_search_bottom" />

        <ImageView
            android:id="@+id/img_calendar_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_search_bottom"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/img_calendar_btn"
            app:layout_constraintStart_toStartOf="@+id/img_calendar_btn"
            app:layout_constraintTop_toBottomOf="@+id/img_calendar_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/line_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edititem" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.514" />

</androidx.constraintlayout.widget.ConstraintLayout>